--- a/src/app/account/settings/coaches/account.settings.coaches.tpl.html
+++ b/src/app/account/settings/coaches/account.settings.coaches.tpl.html
@@ -3,7 +3,7 @@
 </div>
 <div class="panel-collapse" id="aboutCoaching">
     <div class="panel-body">
-        <form name="coachForm" role="form" ng-submit="submit(coachForm)">
+        <form name="coachForm" role="form" ng-submit="submit(coachForm, entityImage)">
 
             <div class="row">
                 <div class="col-sm-12 form-group">
