--- a/src/app/account/settings/enthusiasts/account.settings.enthusiasts.tpl.html
+++ b/src/app/account/settings/enthusiasts/account.settings.enthusiasts.tpl.html
@@ -3,7 +3,7 @@
 </div>
 <div class="panel-collapse" id="personalDetails">
     <div class="panel-body">
-        <form name="enthusiastForm" role="form" ng-submit="submit(enthusiastForm)">
+        <form name="enthusiastForm" role="form" ng-submit="submit(enthusiastForm,entityImage)">
 
             <div class="row">
                 <div class="col-sm-12 form-group">
