--- a/src/app/account/settings/events/account.settings.events.tpl.html
+++ b/src/app/account/settings/events/account.settings.events.tpl.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="panel-body">
-    <form name="eventForm" role="form" ng-submit="submit(eventForm)">
+    <form name="eventForm" role="form" ng-submit="submit(eventForm,entityImage)">
         <div class="row">
             <div class="col-sm-5 form-group">
                 <input type="text"
