--- a/src/app/account/settings/facilities/account.settings.facilities.tpl.html
+++ b/src/app/account/settings/facilities/account.settings.facilities.tpl.html
@@ -2,7 +2,7 @@
     <h4 class="panel-title">Do you provide Sport Facility ?</h4>
 </div>
 <div class="panel-body">
-    <form name="facilityForm" role="form" ng-submit="submit(facilityForm)">
+    <form name="facilityForm" role="form" ng-submit="submit(facilityForm,entityImage)">
         <div class="row">
             <div class="col-sm-5 form-group">
                 <input type="text"
