--- a/src/app/account/settings/offers/account.settings.offers.tpl.html
+++ b/src/app/account/settings/offers/account.settings.offers.tpl.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="panel-body">
-    <form name="offerForm" role="form" ng-submit="submit(offerForm)">
+    <form name="offerForm" role="form" ng-submit="submit(offerForm, entityImage)" enctype="multipart/form-data">
         <div class="row">
             <div class="col-sm-5 form-group">
                 <input type="text"
