--- a/src/app/account/settings/players/account.settings.players.tpl.html
+++ b/src/app/account/settings/players/account.settings.players.tpl.html
@@ -3,7 +3,7 @@
 </div>
 <div>
     <div class="panel-body">
-        <form name="playerForm" role="form" ng-submit="submit(playerForm)">
+        <form name="playerForm" role="form" ng-submit="submit(playerForm,entityImage)">
 
             <div class="row">
                 <div class="col-sm-12 form-group">
