--- a/src/app/account/settings/profiles/account.settings.profiles.tpl.html
+++ b/src/app/account/settings/profiles/account.settings.profiles.tpl.html
@@ -3,7 +3,7 @@
 </div>
 <div class="panel-collapse" id="personalDetails">
     <div class="panel-body">
-        <form name="profileForm" role="form" ng-submit="submit(profileForm)">
+        <form name="profileForm" role="form" ng-submit="submit(profileForm,entityImage)">
 
             <div class="row">
                 <div class="col-sm-4 form-group">
