--- a/src/app/account/settings/suppliers/account.settings.suppliers.tpl.html
+++ b/src/app/account/settings/suppliers/account.settings.suppliers.tpl.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="panel-body">
-    <form name="supplierForm" role="form" ng-submit="submit(supplierForm)">
+    <form name="supplierForm" role="form" ng-submit="submit(supplierForm,entityImage)">
         <div class="row">
             <div class="col-sm-5 form-group">
                 <input type="text"
