--- a/src/app/home/featured/home.featured.tpl.html
+++ b/src/app/home/featured/home.featured.tpl.html
@@ -24,8 +24,9 @@
 
         <div class="featrured-box">
             <div class="pull-left">
-                <p><img src="assets/images/featured.gif"></p>
-
+                <a ng-href="/coaches/details/54b29fb354202de406a81830" class="pull-right form-group">
+                     <p><img src="assets/images/featured.gif"></p>
+                </a>
                 <div class="share-div">
                     <ul>
                         <li><a href="#"><img src="assets/images/share.png"></a></li>
