--- a/src/app/coaches/details/coaches.details.tpl.html
+++ b/src/app/coaches/details/coaches.details.tpl.html
@@ -1,45 +1,14 @@
-<section>
-    <!--Banner Carousel-->
-    <div class="container form-group banner border-btm">
-        <div class="col-sm-3 col-lg-3 form-group">&nbsp;</div>
-        <div class="col-sm-7 col-lg-7">
-            <div class="form-group">
-                <p class="pull-right pagging"><a href="#"><i class="glyphicon glyphicon-chevron-left"></i> Back to
-                    Results</a>&nbsp;&nbsp;<a href="#"><i class="glyphicon glyphicon-chevron-left"></i> Previous</a>&nbsp;&nbsp;<a
-                        href="#">Next <i class="glyphicon glyphicon-chevron-right"></i> </a></p>
-            </div>
-        </div>
+   <br>
+   <br>
+   <br>
+   <br>
 
-    </div>
-    <!--Banner Carousel-->
+
     <div class="container">
-        <!--Search Option for Mobile-->
-        <div class="search-mob">
-            <div class='input-group search-group pull-left'>
-                <span class='input-group-addon searchFilter'><i class='glyphicon glyphicon-align-justify'></i> <i
-                        class='glyphicon glyphicon-chevron-down'></i></span>
-                <input type='text' class='form-control typeahead' id='search'
-                       placeholder="Search for Coach / Facilities / Players / Facilities">
-            </div>
-            <div>
-                <button class="btn btn-primary pull-left">GO</button>
-            </div>
-            <div class="search-filters collapse">
-                <ul>
-                    <li><a href="#" class="all search-img"><span>All</span></a></li>
-                    <li><a href="#" class="coaches search-img"><span>Coaches</span></a></li>
-                    <li><a href="#" class="players search-img"><span>Players</span></a></li>
-                    <li><a href="#" class="facilities search-img"><span>Facilities</span></a></li>
-                    <li><a href="#" class="suppliers search-img"><span>Suppliers</span></a></li>
-                    <li><a href="#" class="events search-img"><span>Events</span></a></li>
-                </ul>
-            </div>
-        </div>
-        <!--Search Option for Mobile-->
-        <div class="row">
+       <div class="row">
             <div class="col-sm-3 col-lg-3 ">
-                <div class="welcome-block">MILIND N JOSHI</div>
-                <div class="coach-img"><img src="assets/images/coach.jpg" class="img-responsive "/></div>
+                <div class="welcome-block">{{profileDetails.firstName}} {{profileDetails.lastName}}</div>
+                <div class="coach-img"><img ng-src="{{profileImage}}" ng-init="getImageFromS3(profileDetails)" class="img-responsive "/></div>
                 <div class="settings form-group">
                     <p>
                         <span class="pull-left"><span class="star-green"></span><span class="star-green"></span><span
@@ -85,38 +54,42 @@
                             </li>
                         </ul>
                     </div></span></div>
-                    <p class="clear-both"><a href="#">milindjoshi@gmail.com</a></p>
+                    <p class="clear-both"><a href="#">{{profileDetails.email}}</a></p>
 
-                    <p><a href="#">milind.joshi@goldgym.com</a></p>
+                    <p><a href="#">{{profileDetails.websiteUrl}}</a></p>
 
-                    <p>Mobile +91 8657272428</p>
+                    <p>Mobile {{profileDetails.cellPhone}}</p>
 
-                    <p>Office +91 20 47586978</p>
+                    <p>Office {{profileDetails.workPhone}}</p>
 
-                    <p>Registered address:<br/>Post 91, Lane 7, Off North Main Road<br/>Koregaon Park<br/>Pune: 411
-                        053<br/><a href="#"><i class="glyphicon glyphicon-map-marker"></i></a> Map</p>
+                    <p>Registered address:<br/>{{profileDetails.streetOne}}<br/>{{profileDetails.streetTwo}}<br/>{{profileDetails.city}}: {{profileDetails.pin}}<br/>
+
 
                 </div>
+                <div class="row">
+                    <div class="col.sm-12 form-group">
+                        <div id="coach-addr-map-canvas"></div>
+                    </div>
+                </div>
+
                 <div class="settings form-group">
-                    <p>CERTIFICATIONS</p>
+                    <ul >
+                        <li ng-repeat="sport in sports">
+                            <p><h2>{{sport.certificationName}}</h2></p>
 
-                    <p><img src="assets/images/certificate.jpg"/></p>
+                            <p><img src="assets/images/certificate.jpg"/></p>
 
-                    <p class="city">National Coaching Certification Program</p>
+                            <p class="city"><h2>{{sport.certificationBody}}</h2></p>
 
-                    <p>Valid till: Feb 2018</p>
-
-                    <p><img src="assets/images/certificate-1.jpg"/></p>
-
-                    <p class="city">NFHS Learning</p>
-
-                    <p>Valid till: Feb 2018</p>
+                            <p>{{sport.certificationValidFrom}}</p>
+                        </li>
+                    </ul>
                 </div>
             </div>
             <div class="col-sm-7 col-lg-7">
                 <div class="row">
                     <div class="col-sm-5 col-lg-5">
-                        <h1>About Milind</h1>
+                        <h1>About {{profileDetails.firstName}}</h1>
 
                         <p>Sea give. You're after yielding in. Given doesn't for him. Form kind day bearing seed.
                             Wherein. Air don't all tree years bearing moveth have multiply itself so to you're moveth
@@ -127,20 +100,21 @@
                         <p>Life was kind was saying fruitful yielding divide. Us all sixth Our image image their. Moved
                             may lights every green that fifth can't divide moved divide appear. </p>
 
-                        <p><br/><a href="#">http://www.facebook.com/milindjoshi</a></p>
+                        <p><br/><a href="#">{{profileDetails.facebookUrl}}</a></p>
 
-                        <p><a href="#">http://www.youtube.com/milindjoshi</a></p>
+                        <p><a href="#">{{profileDetails.youtubeUrl}}</a></p>
 
-                        <p><a href="#">www.milindjoshicoaching.com</a></p>
+                        <p><a href="#">{{profileDetails.websiteUrl}}</a></p>
 
                         <h3>Other Features</h3>
 
                         <div class="other-features">
-                            <ul>
-                                <li>Week end Coaching</li>
-                                <li>Private Coaching</li>
-                                <li>Coaching for Kids (age 3 to 5 yrs)</li>
-                                <li>Free trial sessions</li>
+                            <ul ng-repeat="sport in sports">
+                                <li>Coaching: {{sport.name}}</li>
+                                <li >Week end Coaching</li>
+                                <li ng-if="sport.privateCoaching">Private Coaching</li>
+                                <li ng-if="sport.coachingKids">Coaching for Kids (age 3 to 5 yrs)</li>
+                                <li ng-if="sport.freeTrialClasses">Free trial sessions</li>
                             </ul>
                         </div>
                         <p><img src="assets/images/slider.jpg"/></p>
@@ -149,9 +123,9 @@
                     <div class="col-sm-7 col-lg-7">
                         <h1>Coaching Experience</h1>
 
-                        <div class="coaching-exp form-group">
+                        <div class="coaching-exp form-group" ng-repeat="sport in sports">
                             <p>
-                                <span class="exp-txt pull-left form-group">Batminton (5yrs)</span>
+                                <span class="exp-txt pull-left form-group">{{sport.name}} ({{sport.experienceYears}}yrs)</span>
                                 <span class="pull-right"><span class="star-green"></span><span
                                         class="star-green"></span><span class="star-green"></span><span
                                         class="star-grey-green"></span><span class="star-grey"></span></span>
@@ -164,50 +138,20 @@
                                     <th>Fees per session</th>
                                 </tr>
                                 </thead>
-                                <tr>
+                                <tr ng-if="sport.coachingMen === true">
                                     <td>Men</td>
-                                    <td>27 to 50</td>
-                                    <td>500/-</td>
+                                    <td>{{sport.menFromAge}} to {{sport.menToAge}}</td>
+                                    <td>{{sport.menCharges}}/-</td>
                                 </tr>
-                                <tr>
+                                <tr ng-if="sport.coachingWomen === true">
                                     <td>Women</td>
-                                    <td>24 to 40</td>
-                                    <td>500/-</td>
+                                    <td>{{sport.womenFromAge}} to {{sport.womenToAge}}</td>
+                                    <td>{{sport.womenCharges}}/-</td>
                                 </tr>
-                                <tr>
+                                <tr ng-if="sport.coachingKids === true">
                                     <td>Kids</td>
-                                    <td>X</td>
-                                    <td>X</td>
-                                </tr>
-                            </table>
-                            <p>
-                                <span class="exp-txt pull-left form-group">Tennis (8yrs)</span>
-                                <span class="pull-right"><span class="star-green"></span><span
-                                        class="star-green"></span><span class="star-green"></span><span
-                                        class="star-grey-green"></span><span class="star-grey"></span></span>
-                            </p>
-                            <table class="table-responsive clear-both exp-table" width="100%">
-                                <thead>
-                                <tr>
-                                    <th>Candidate</th>
-                                    <th>Age</th>
-                                    <th>Fees per session</th>
-                                </tr>
-                                </thead>
-                                <tr>
-                                    <td>Men</td>
-                                    <td>24 to 45</td>
-                                    <td>350/-</td>
-                                </tr>
-                                <tr>
-                                    <td>Women</td>
-                                    <td>X</td>
-                                    <td>X</td>
-                                </tr>
-                                <tr>
-                                    <td>Kids</td>
-                                    <td>04 to 16</td>
-                                    <td>200/-</td>
+                                    <td>{{sport.kidsFromAge}} to {{sport.kidsToAge}}</td>
+                                    <td>{{sport.kidsCharges}}/-</td>
                                 </tr>
                             </table>
 
@@ -215,30 +159,17 @@
                         <h1>Affiliation with sports facilities</h1>
 
                         <div class="coaching-exp form-group">
-                            <div class="row form-group">
+                            <div class="row form-group" ng-repeat="sport in sports">
                                 <div class="col-sm-6 form-group ">
                                     <img src="assets/images/map.jpg"/>
                                 </div>
                                 <div class="col-sm-6">
-                                    <h4>The Body workshop</h4>
+                                    <h4>{{sport.name}}</h4>
 
-                                    <p>Post 91, Lane 7, Off North Main<br/>Road, Koregaon Park<br/>Pune: 411 053</br>Map
+                                    <p>{{sport.streetOne}}<br/>{{sport.streetTwo}}<br/>{{sport.city}}: {{sport.pin}}</br>Map
                                     </p>
 
-                                    <p>Ph: +91 20 3349 4423</p>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col-sm-6 form-group ">
-                                    <img src="assets/images/map.jpg"/>
-                                </div>
-                                <div class="col-sm-6">
-                                    <h4>Gold Gym Kalyani Nagar</h4>
-
-                                    <p>Post 91, Lane 7, Off North Main<br/>Road, Koregaon Park<br/>Pune: 411 053</br>Map
-                                    </p>
-
-                                    <p>Ph: +91 20 3349 4423</p>
+                                    <p>Ph: {{profileDetails.cellPhone}}</p>
                                 </div>
                             </div>
 
@@ -246,11 +177,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-2 col-lg-2 form-group snowlink">
-                <img src="assets/images/snowlink.jpg" class="img-responsive"/>
-            </div>
+
         </div>
 
     </div>
-    <!--container-->
-</section>
