added disqus support

--- a/src/app/coaches/details/coaches.details.tpl.html
+++ b/src/app/coaches/details/coaches.details.tpl.html
@@ -14,8 +14,7 @@
                         <span class="pull-left"><span class="star-green"></span><span class="star-green"></span><span
                                 class="star-green"></span><span class="star-grey-green"></span><span
                                 class="star-grey"></span></span>
-                        <span class="pull-right"><img src="assets/images/review.png"/> Reviews <a
-                                href="#">(223)</a></span>
+                        <span class="pull-right"><img src="assets/images/review.png"/> <span disqus-identifier="coach._id"></span> </span>
                     </p>
 
                     <div class="clear-both"><img src="assets/images/likes.gif" class="pull-left"/> <span
@@ -177,6 +176,8 @@
                     </div>
                 </div>
             </div>
+
+           <div disqus="coach._id"></div>
 
         </div>
 
